<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="110dp"
    android:layout_margin="10dp"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/body_image"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:adjustViewBounds="true"
        android:src="@drawable/clothes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@drawable/rounded_text_2"
        android:gravity="center"
        android:paddingHorizontal="2dp"
        android:text="@string/_3_km"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/body_image"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00_00"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/body_image" />

    <TextView
        android:id="@+id/discount"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:background="@drawable/rounded_text"
        android:gravity="center"
        android:paddingHorizontal="3dp"
        android:text="@string/_00"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/body_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/product_service_title_product"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/discount" />


</androidx.constraintlayout.widget.ConstraintLayout>